# mementar

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
cmake/modules/: FindFilesystem.cmake
include/mementar/cpp_compat/: filesystem.hpp
src/core/EpisodicTree/: ArchivedLeaf.cpp  ArchivedLeafNode.cpp  CompressedLeafNode.cpp
src/core/archiving_compressing/archiving/: Header.cpp
